<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:divider="?dividerHorizontal" android:dividerPadding="0.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <com.meizu.widget.LimitedHeightScrollView android:id="@id/resolver_grid" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/resolve_grid_left" android:layout_marginTop="@dimen/resolve_grid_top" android:layout_marginRight="@dimen/resolve_grid_right" android:layout_marginBottom="@dimen/resolve_grid_bottom" />
    </FrameLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/check_bar" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:paddingBottom="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <CheckBox android:id="@id/alwaysUse" android:background="@null" android:paddingLeft="27.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:textAppearance="?textAppearanceSmall" android:id="@id/clearDefaultHint" android:paddingLeft="0.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/clearDefaultHintMsg" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/button_bar" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:measureWithLargestChild="true" android:layoutDirection="locale" style="?android:attr/buttonBarStyle">
        <Button android:enabled="false" android:textSize="14.0sp" android:layout_gravity="right" android:id="@id/button_always" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="@dimen/alert_dialog_button_bar_height" android:text="@string/activity_resolver_use_always" android:maxLines="2" android:layout_weight="1.0" android:onClick="onButtonClick" style="?android:attr/buttonBarButtonStyle" />
        <Button android:enabled="false" android:textSize="14.0sp" android:layout_gravity="left" android:id="@id/button_once" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="@dimen/alert_dialog_button_bar_height" android:text="@string/activity_resolver_use_once" android:maxLines="2" android:layout_weight="1.0" android:onClick="onButtonClick" style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/hint_bar" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:paddingBottom="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?textAppearanceSmall" android:id="@id/launcherHint" android:paddingLeft="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/launcher_choose_hint" />
    </LinearLayout>
</LinearLayout>
