<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/popup_list_item_padding_left" android:paddingRight="@dimen/popup_list_item_padding_right" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="left|center" android:orientation="vertical" android:paddingLeft="@dimen/popup_list_item_content_padding_left" android:paddingRight="@dimen/popup_list_item_content_padding_right" android:layout_width="fill_parent" android:layout_height="25.0dip">
        <com.android.internal.widget.DialogTitle android:textSize="14.0dip" android:textColor="#ff999999" android:ellipsize="end" android:id="@id/alertTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/select_input_method" android:singleLine="true" style="@android:style/DialogWindowTitle" />
    </LinearLayout>
    <View android:background="@drawable/list_divider_light_mz_2px" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="vertical" android:id="@id/hard_keyboard_section" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="@dimen/popup_list_item_content_padding_left" android:paddingRight="@dimen/popup_list_item_content_padding_right" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?listPreferredItemHeightSmall">
            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textAppearance="?textAppearanceMedium" android:ellipsize="marquee" android:gravity="left|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hardware" android:singleLine="true" />
                <TextView android:textAppearance="?textAppearanceSmall" android:ellipsize="marquee" android:gravity="left|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/use_physical_keyboard" android:singleLine="true" />
            </LinearLayout>
            <Switch android:id="@id/hard_keyboard_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <View android:background="@drawable/list_divider_light_mz" android:layout_width="fill_parent" android:layout_height="0.5dip" />
    </LinearLayout>
</LinearLayout>
